data/derived/comb/progs/unify/prog1141.ml.out
Characters 508-509:
  then 1
       ^
Error: This expression has type int but an expression was expected of type
         float
